--- a/campaing-service/pom.xml
+++ b/campaing-service/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>2.1.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
