Added rabbitMQ communication

--- a/customer-campaign-service/src/main/resources/application.yml
+++ b/customer-campaign-service/src/main/resources/application.yml
@@ -1,1 +1,33 @@
+server:
+  port: 8110
 
+spring:
+  application:
+    name: customer-campaign-service
+  h2:
+    console:
+      enabled: true
+      path: /h2
+  datasource:
+    url: jdbc:h2:file:~/customer-campaign
+    username: sa
+    password: admin
+    driver-class-name: org.h2.Driver
+  rabbitmq:
+    host: localhost
+    port: 5672
+
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
+
+ampq:
+  hostname: "localhost"
+  port: 5672
+  exchange: "nts"
+  queue: "campaign"
+
+logging:
+  level:
+    com.nts: DEBUG
