--- a/customer-campaign-service/src/main/resources/application.yml
+++ b/customer-campaign-service/src/main/resources/application.yml
@@ -14,16 +14,16 @@ spring:
     password: admin
     driver-class-name: org.h2.Driver
   rabbitmq:
-    host: localhost
+    host: ${RABBITMQ_SERVER:localhost}
     port: 5672
 
 eureka:
   client:
-    service-url:
-      default-zone: http://localhost:8761/eureka
+    serviceUrl:
+      defaultZone: ${EUREKA_SERVER:http://localhost:8761/eureka}
 
 ampq:
-  hostname: "localhost"
+  hostname: ${RABBITMQ_SERVER:localhost}
   port: 5672
   exchange: "nts"
   queueNew: "campaign-new"
