--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -16,5 +16,5 @@ spring:
 
 eureka:
     client:
-        service-url:
-            default-zone: http://localhost:8761/eureka
+        serviceUrl:
+            defaultZone: ${EUREKA_SERVER:http://localhost:8761/eureka}
