--- a/team-service/src/main/resources/application.yml
+++ b/team-service/src/main/resources/application.yml
@@ -16,6 +16,6 @@ spring:
 
 eureka:
   client:
-    service-url:
-      default-zone: http://localhost:8761/eureka
+    serviceUrl:
+      defaultZone: ${EUREKA_SERVER:http://localhost:8761/eureka}
 
