--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -14,6 +14,27 @@ spring:
         password: admin
         driver-class-name: org.h2.Driver
 
+
+feign:
+    hystrix:
+        enabled: true
+    client:
+        config:
+            default:
+                connectTimeout: 5000
+                readTimeout: 5000
+
+hystrix:
+    command:
+        default:
+            execution:
+                timeout:
+                    enabled: false
+            isolation:
+                strategy: "THREAD"
+                thread:
+                    timeoutInMilliseconds: "3000"
+
 eureka:
     client:
         serviceUrl:
