--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -8,11 +8,10 @@ spring:
         console:
             enabled: true
             path: /h2
-    datasource:
-        url: jdbc:h2:file:~/customer
-        username: sa
-        password: admin
-        driver-class-name: org.h2.Driver
+    data.mongodb:
+        host: ${RABBITMQ_SERVER:localhost}
+        port: 27017
+        database: customer
 
 
 feign:
